# arpa-gui

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: app.rs  ephemerides.rs  helpers.rs  main.rs  pulsars.rs
src/app/: ephemerides.rs  error.rs  helpers.rs  pipeline.rs  pulsars.rs  syncher.rs  toas.rs
src/app/helpers/: downloader.rs  iconic_button.rs
src/app/syncher/: request.rs
src/helpers/: downloader.rs
