[package]
name = "gui"
version = "0.1.0"
edition = "2024"
authors = ["Samuel Gullin <gullin@ia.forth.gr>"]

[dependencies]
argos-arpa = "0.3.2"
# argos-arpa = { path = "../arpa" }
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }
eframe = "0.32.1"
egui = "0.32.1"
egui_extras = "0.32.1"
rayon = "1.11.0"
rfd = "0.15.4"
